<resources>
    <string name="app_name">Budget Manager</string>

    <string name="edit_accounts">Edit accounts</string>
    <string name="new_transaction">New transaction</string>
    <string name="done_editing">Done editing</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="new_item">New</string>
    <string name="name">Name:</string>
    <string name="type">Type: </string>
    <string name="startValue">Start value: </string>
    <string name="value">Value: </string>
    <string name="currency">Currency: </string>
    <string name="account_name">Account name</string>
    <string name="account_type">Account type</string>
    <string name="account_value">Account value</string>
    <string name="account_currency">Account currency</string>
    <string name="transaction_name">Transaction name</string>
    <string name="account">Account: </string>
    <string name="category">Category: </string>
    <string name="date">Date: </string>
    <string name="transaction_value">Transaction value</string>
    <string name="income">income</string>
    <string name="expense">expense</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_value">Total value:</string>
    <string name="default_account">default_account</string>
    <string name="privat_account">privat_account</string>
    <string name="edit_categories">Edit categories</string>
    <string name="category_budget">Category budget</string>
    <string-array name="settings_array">
        <item>Edit categories</item>
        <item>Default account:</item>
        <item>Privat24 account:</item>
    </string-array>
    <string-array name="period_array">
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>
    <string name="period">Period:</string>
    <string name="budget_category">Budget category</string>
</resources>
