<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.NewAccountFragment"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/new_account_textview"
            android:layout_weight="0.3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/name" />
        <EditText
            style="@style/new_account_edittext"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/new_account_name"
            android:hint="@string/account_name"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/new_account_textview"
            android:layout_weight="0.3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/type" />
        <EditText
            style="@style/new_account_edittext"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/new_account_type"
            android:hint="@string/account_type"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/new_account_textview"
            android:layout_weight="0.3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/startValue" />
        <EditText
            style="@style/new_account_edittext"
            android:inputType="numberDecimal"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/new_account_value"
            android:hint="@string/account_value"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/new_account_textview"
            android:layout_weight="0.3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/currency" />
        <EditText
            style="@style/new_account_edittext"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/new_account_currency"
            android:hint="@string/account_currency"/>
    </LinearLayout>


</LinearLayout>
