<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_transaction_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="layout.NewAccountFragment">

    <LinearLayout
        style="@style/new_transaction_fragment_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/new_account_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text="@string/name" />

        <EditText
            android:id="@+id/new_transaction_name"
            style="@style/new_account_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:hint="@string/transaction_name" />
    </LinearLayout>

    <LinearLayout
        style="@style/new_transaction_fragment_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/new_account_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text="@string/value" />

        <EditText
            android:id="@+id/new_transaction_value"
            style="@style/new_account_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:hint="@string/transaction_value"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radio_type"
        style="@style/new_transaction_fragment_line"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/new_account_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text="@string/type" />

        <RadioButton
            android:id="@+id/radio_expense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:checked="true"
            android:text="@string/expense" />

        <RadioButton
            android:id="@+id/radio_income"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/income" />
    </RadioGroup>

    <LinearLayout
        style="@style/new_transaction_fragment_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/new_account_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text="@string/date" />

        <TextView
            android:id="@+id/transaction_date"
            style="@style/new_account_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7" />

    </LinearLayout>

    <LinearLayout
        style="@style/new_transaction_fragment_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/new_account_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text="@string/category" />

        <Spinner
            android:id="@+id/categories_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7" />

    </LinearLayout>

    <LinearLayout
        style="@style/new_transaction_fragment_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/new_account_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text="@string/account" />

        <Spinner
            android:id="@+id/accounts_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7" />

    </LinearLayout>

</LinearLayout>
